# senselab

./: .autorc  .codespellrc  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ACTION_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  FEATURES.tmp.md  LICENSE.md  README.md  SECURITY.md  Untitled.ipynb  custom_notebook.ipynb  env.example  index.html  index.rst  package-lock.json  package.json  pipepal.html  ppg-mean-phoneme-duration-plan.md  pyproject.toml  requirements.txt  script.py  search.js  senselab.html  template_setup.py  test.ipynb  tests.html
.github/: EC2_GPU_RUNNER.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  development_task.yaml  general.yaml  support_request.yaml
.github/PULL_REQUEST_TEMPLATE/: advanced.md  basic.md  pull_request_template.md
.github/workflows/: claude-code-review.yaml  claude-code-review.yml  claude.yaml  claude.yml  docs-preview.yaml  docs.yaml  e2c-runner-tests-310.txt  e2c-runner-tests-310.yaml  e2c-runner-tests-311.txt  github-runner-tests.yaml  greetings.yaml  greetings.yml  main-branch-status.yaml  publish.yaml  release.yaml  test.yaml  tests.yaml
artifacts/: test-device-audit.md  tutorial-audit.md
data_for_testing/output_dataset/: data-00000-of-00001.arrow
deepevall/: __init__.py  api.py  deep_eval.py  metrics.py  script_line.py
deepevall/tests/: __init__.py  eval_test.py  test_eval.py
docker_containers/mediapipe/: .dockerignore  Dockerfile  README.md
docs/: compatibility-matrix.md  conversation-analysis-workflow-plan.md
docs_style/pdoc-theme/: syntax-highlighting.css  theme.css
github/ISSUE_TEMPLATE/: development_task.yaml
github/PULL_REQUEST_TEMPLATE/: advanced.md
github/workflows/: docs.yaml  publish.yaml  release.yaml
mcp_experiment/: README.md  demo.ipynb
pipepal/: app.html  audio.html  cli.html  utils.html  video.html
pipepal/audio/: tasks.html
pipepal/utils/: abstract_component.html  functions.html
pipepal/video/: tasks.html
pr-479/: senselab.html
pr-489/senselab/: text.html
pr-496/senselab/: agentic_interface.html
pr-497/: compatibility-matrix.md
pr-499/senselab/: audio.html
pr-504/senselab/: utils.html
pr-505/: search.js
pr-506/: search.js
pr-507/: search.js
pr-508/: search.js
pr-509/: search.js
pr-510/: search.js
pr-511/: search.js
pr-512/: search.js
pr-513/: search.js
pr-514/: search.js
pr-515/: search.js
pr-516/: search.js
pr-517/: search.js
pr-517/senselab/: video.html
pr-518/: search.js
pr-519/: search.js  senselab.html
pr-519/senselab/: utils.html
pr-520/: search.js
scripts/: aaa.py  analyze_audio.py  exp2.py  experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py  experiment7.py  experiment8.py  generate-compat-matrix.py  generate_model_registry.py  install-ffmpeg.sh  profile_model_tiers.py  profile_with_scalene.py  pyannote_31_experiment.py  setup-gpu-ci.sh
senselab/: agentic_interface.html  app.html  audio.html  cli.html  text.html  utils.html  video.html
senselab/agentic_interface/: launcher.html  senselab_agent.html
senselab/audio/: data_structures.html  tasks.html  workflows.html
senselab/text/: tasks.html
senselab/utils/: config.html  constants.html  data_structures.html  tasks.html
senselab/video/: data_structures.html  tasks.html
specs/20260418-104204-alpha-prerelease-process/: tasks.md
specs/20260418-120722-aws-gpu-test-setup/: tasks.md
specs/20260419-133236-test-classification-deps/: tasks.md
specs/20260420-212321-fix-colab-tutorials/: plan.md  research.md  spec.md  tasks.md
specs/20260423-213942-pedagogical-tutorials/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260424-152323-improve-ser-tutorial/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260424-232054-docs-pr-preview/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260428-101838-expand-speech-models/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260429-201758-auditory-scene-analysis/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260506-154425-audio-analysis-asr-extensions/: tasks.md
specs/20260508-173136-compare-uncertainty/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260509-204500-ser-silent-failure-guards/: plan.md
specs/20260512-204619-fix-canary-cuda-conflict/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: test.ipynb
src/YOUR_PACKAGE_NAME/: __init__.py
src/pipepal/: app.py  cli.py
src/senselab/: __init__.py  app.py  cli.py  model_registry.md  model_registry.yaml
src/tests/: __init__.py  app_test.py  conftest.py  my_test.py  pyannote_diarization_test.py  test_app.py  test_audio_exampletask_exampleservice.py  test_audio_iotask_datasets.py  test_exampletask_exampleservice.py  test_video_exampletask_exampleservice.py  test_video_iotask_datasets.py
tests/: test_app.html
tutorials/: 00_getting_started.ipynb  README.md  _config.yaml  _config.yml  dimensionality_reduction.ipynb  dimensionality_reduction_tutorial.ipynb  extract_speaker_embeddings.ipynb  extract_speaker_embeddings_tutorial.ipynb  getting_started.ipynb  llms.ipynb  manifest.json  speaker_diarization.ipynb  speaker_verification.ipynb  speech_enhancement.ipynb  speech_to_text.ipynb  text_to_speech.ipynb  transcribe_timestamped.ipynb  transcribe_timestamped_tutorial.ipynb  tutorial.ipynb  voice_activity_detection.ipynb  voice_cloning.ipynb
tutorials/audio/: 00_getting_started.ipynb  audio_data_augmentation.ipynb  audio_recording_and_acoustic_analysis.ipynb  audio_speech_emotion_recognition.ipynb  auditory_scene_analysis.ipynb  conversational_data_exploration.ipynb  extract_speaker_embeddings.ipynb  features_extraction.ipynb  forced_alignment.ipynb  identify_language.ipynb  shbt205_lab.ipynb  speaker_diarization.ipynb  speaker_verification.ipynb  speech_emotion_recognition.ipynb  speech_enhancement.ipynb  speech_representations_lab.ipynb  voice_cloning.ipynb  (+5 more)
(+927 files in other folders)
