[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "senselab"
dynamic = ["version"]
description = "senselab is a Python package that simplifies building pipelines for speech and voice analysis."
authors = [
  {name = "Fabio Catania", email = "fabiocat@mit.edu"},
  {name = "Satra Ghosh", email = "satra@mit.edu"}
]
maintainers = [
  {name = "Fabio Catania", email = "fabiocat@mit.edu"},
  {name = "Satra Ghosh", email = "satra@mit.edu"},
  {name = "Jordan Wilke", email = "wilke18@mit.edu"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
keywords = ["audio", "voice", "speech", "video", "pose", "face", "text", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "torch~=2.8.0; sys_platform != 'darwin' or platform_machine == 'arm64'",
  "torchvision~=0.23.0",
  "torchcodec~=0.7.0",
  "transformers~=4.53.3",
  "datasets~=3.6",
  "pydantic~=2.11",
  "accelerate",
  "huggingface-hub~=0.34",
  "pycountry~=24.6",
  "iso639~=0.1",
  "scikit-learn~=1.7",
  "umap-learn~=0.5",
  "python-ffmpeg~=2.0",
  "nest-asyncio~=1.6",
  "matplotlib~=3.10",
  "joblib~=1.5",
  "torchaudio~=2.8.0",
  "praat-parselmouth~=0.4",
  "audiomentations~=0.42",
  "torch-audiomentations~=0.12",
  "speechbrain~=1.0",
  "pyannote-audio~=4.0",
  "opensmile~=2.6",
  "vocos~=0.1",
  "coqui-tts~=0.27",
  "ppgs>=0.0.9,<0.0.10",
  "snorkel>=0.10.0,<0.11.0",
  "lightning~=2.4.0",
]

[project.optional-dependencies]
articulatory = [
  "speech-articulatory-coding~=0.1",
]
nlp = [
  "jiwer>=3.0,<4.0",
  "nltk~=3.9",
]
text = [
  "sentence-transformers~=5.1",
  "pylangacq~=0.19",
]
video = [
  "av~=15.0",
  "opencv-python-headless~=4.11",
  "ultralytics~=8.3",
]
senselab-ai = [
  "jupyterlab~=4.4",
  "notebook-intelligence~=2.3.2",
  "ipywidgets~=8.1",
  "ipykernel~=7.1",
  "nbformat~=5.10",
  "nbss-upload~=0.1",
]

[project.urls]
Homepage = "https://github.com/sensein/senselab"
Repository = "https://github.com/sensein/senselab"
Documentation = "https://sensein.github.io/senselab"

[project.scripts]
senselab-ai = "senselab.agentic_interface.launcher:senselab_ai"

[dependency-groups]
dev = [
  "pytest-xdist[psutil]~=3.8.0",
  "pytest-mock~=3.14",
  "pytest-cov~=7.0",
  "mypy~=1.9",
  "pre-commit~=4.0",
  "ruff~=0.3",
  "codespell~=2.3",
  "uvloop~=0.22",
  "types-requests~=2.32",
  "python-dotenv~=1.1",
  "ipython~=9.7",
  "ipykernel~=7.1",
  "ipywidgets~=8.1",
  "jupyterlab~=4.4",
]
docs = [
  "pdoc~=16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/senselab"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "src/tests"
]

[tool.mypy]
ignore_missing_imports = true
plugins = [
  "pydantic.mypy"
]
extra_checks = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = ["ANN101", "ANN102", "F401"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.codespell]
skip = [
  "uv.lock",
  "docs_style/pdoc-theme/syntax-highlighting.css",
  "*.cha",
  "*.ipynb"
]
ignore-words-list = ["senselab", "nd", "astroid", "wil", "SER", "te", "EXPRESSO", "VAI"]
