[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "senselab"
dynamic = ["version"]
description = "senselab is a Python package that simplifies building pipelines for speech and voice analysis."
authors = [
  {name = "Fabio Catania", email = "fabiocat@mit.edu"},
  {name = "Satra Ghosh", email = "satra@mit.edu"}
]
maintainers = [
  {name = "Fabio Catania", email = "fabiocat@mit.edu"},
  {name = "Satra Ghosh", email = "satra@mit.edu"},
  {name = "Jordan Wilke", email = "wilke18@mit.edu"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = ["audio", "voice", "speech", "video", "pose", "face", "text", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  # PyTorch ecosystem
  "torch>=2.8; sys_platform != 'darwin' or platform_machine == 'arm64'",
  "torchvision>=0.23",
  "torchcodec>=0.7",
  "torchaudio>=2.8",
  # ML frameworks (these pull packaging, joblib, etc.)
  "huggingface-hub>=1.3",  # transformers>=5.0 needs hf-hub>=1.3
  "transformers>=5.0",  # >=5.0 required for huggingface-hub>=1.0 compatibility
  "datasets>=3.6",
  "accelerate",
  "peft>=0.13",  # required by Granite Speech 3.3's LoRA adapter
  "speechbrain>=1.0",
  # Audio processing backends (pyannote pulls matplotlib, torch-audiomentations)
  "pyannote-audio>=4.0",
  "audiomentations>=0.42",
  "opensmile>=2.6",
  "vocos>=0.1",
  "praat-parselmouth>=0.4.3",  # 0.4.0-0.4.2 fail on Python 3.12+
  # Data / utilities
  "pydantic>=2.11",
  "pycountry>=24.6",
  "iso639>=0.1",
  "scikit-learn>=1.7",
  "umap-learn>=0.5.4",  # 0.5.0-0.5.3 fail on Python 3.12+
  "python-dotenv>=1.0",
  "nest-asyncio>=1.6"
]

[project.optional-dependencies]
nlp = [
  "jiwer>=3.0",
  "nltk>=3.9",
  "uroman>=1.3"
]
text = [
  "sentence-transformers>=5.1",
  "pylangacq>=0.20"
]
video = [
  "av>=15",
  "opencv-python-headless>=4.11",
  "ultralytics>=8.3"
]
senselab-ai = [
  "jupyterlab~=4.4",
  "notebook-intelligence~=2.3.2",
  "ipywidgets~=8.1",
  "ipykernel~=7.1",
  "nbformat~=5.10",
  "nbss-upload~=0.1"
]

[project.urls]
Homepage = "https://github.com/sensein/senselab"
Repository = "https://github.com/sensein/senselab"
Documentation = "https://sensein.group/senselab"

[project.scripts]
senselab-ai = "senselab.agentic_interface.launcher:senselab_ai"

[dependency-groups]
dev = [
  "pytest-xdist[psutil]~=3.8.0",
  "pytest-mock~=3.14",
  "pytest-cov~=7.0",
  "mypy~=1.9",
  "pre-commit~=4.0",
  "ruff~=0.3",
  "codespell~=2.3",
  "uvloop~=0.22",
  "types-requests~=2.32",
  "python-dotenv~=1.1",
  "ipython~=9.7",
  "ipykernel~=7.1",
  "ipywidgets~=8.1",
  "jupyterlab~=4.4",
  "papermill~=2.6"
]
docs = [
  "pdoc~=16.0"
]
profiling = [
  "scalene>=2.2",
  "nbconvert>=7"
]

[tool.hatch.build.targets.wheel]
packages = ["src/senselab"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "src/tests"
]

[tool.mypy]
ignore_missing_imports = true
plugins = [
  "pydantic.mypy"
]
extra_checks = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "scripts"
]
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = ["F401"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = []
# Notebooks: cells share state but ruff lints per-cell, causing false positives
"tutorials/**/*.ipynb" = ["F821", "E402", "I001", "F811", "ANN001", "ANN201", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.codespell]
skip = [
  "uv.lock",
  "docs_style/pdoc-theme/syntax-highlighting.css",
  "*.cha",
  "*.ipynb"
]
ignore-words-list = ["senselab", "nd", "astroid", "wil", "SER", "te", "EXPRESSO", "VAI", "vie"]
